AD3-337 Add GIS data coming from Analytics data